--- a/CST438-Project-Share/app/src/main/AndroidManifest.xml
+++ b/CST438-Project-Share/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CST438ProjectShare">
         <activity android:name=".LandingActivity"></activity>
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
